--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
             </li> -->
 
             <li>
-              <a href="/home">Expenses</a>
+              <a href="/expenses">Expenses</a>
             </li>
             <li>
               <a href="/index">Payment Options</a>
