--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h2>Add New Expense</h2>
 </div>
-
+<form action="/expenses/create">
 <div class="row">
   <div class="col-lg-6">
     <div class="well">
@@ -11,13 +11,13 @@
           <div class="form-group">
             <label for="inputDescription" class="col-lg-2 control-label">Description</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" placeholder="Description">
+              <input name="description" type="text" class="form-control" placeholder="Description">
             </div>
           </div>
           <div class="form-group">
             <label for="inputAmount" class="col-lg-2 control-label">Total Amount</label>
             <div class="col-lg-10">
-               <input type="text" class="form-control" placeholder="Amount">
+               <input name="amount" type="text" class="form-control" placeholder="Amount">
             </div>
 
           </div>
@@ -35,14 +35,14 @@
           <div class="form-group">
             <label for="textArea" class="col-lg-2 control-label">Comments (Optional)</label>
             <div class="col-lg-10">
-              <textarea class="form-control" rows="3" id="textArea"></textarea>
+              <textarea name="comment" class="form-control" rows="3" id="textArea"></textarea>
               <span class="help-block">Optional</span>
             </div>
           </div>
 
           <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
-              <button class="btn btn-default">Cancel</button>
+              <a href="/expenses" class="btn btn-default">Cancel</a>
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </div>
