new models for expenses and trip, user model
One to many for trips to expenses

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Myapp</title>
+  <title>Trave.ly</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="http://bootswatch.com/simplex/bootstrap.css" media="screen">
@@ -19,7 +19,7 @@
       <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="../" class="navbar-brand">Trave.ly</a>
+          <a href="/" class="navbar-brand">Trave.ly</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -28,27 +28,15 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
-
-            <!-- <li>
-              <a href="../help/">Planning</a>
-            </li>
-            <li>
-              <a href="">Travel Information</a>
-            </li> -->
-
-            <li>
-              <a href="/expenses">Expenses</a>
-            </li>
-            <li>
-              <a href="/index">Payment Options</a>
-            </li>
-            <li>
-              <a href="/newflightinfo">Enter New Flight Info</a>
-            </li>
+            <li><a href="/trips">My Trips</a></li>
+            <li><a href="/expenses">Expenses</a></li>
+            <li><a href="/newflightinfo">Enter New Flight Info</a></li>
+            <li><a href="/index">Resources</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://builtwithbootstrap.com/" target="_blank">Signup</a></li>
+
+            <li><a href="/signup" target="_blank">Signup</a></li>
             <li><a href="/signin" target="_blank">Login</a></li>
           </ul>
 
