--- a/app/views/moolah/edit.html.erb
+++ b/app/views/moolah/edit.html.erb
@@ -11,13 +11,13 @@
           <div class="form-group">
             <label for="inputDescription" class="col-lg-2 control-label">Description</label>
             <div class="col-lg-10">
-              <input value=<%= @expense.description %> name="description"type="text" class="form-control" placeholder="Description">
+              <input value="<%= @expense.description %>" name="description"type="text" class="form-control" placeholder="Description">
             </div>
           </div>
           <div class="form-group">
             <label for="inputAmount" class="col-lg-2 control-label">Total Amount</label>
             <div class="col-lg-10">
-               <input value=<%= @expense.amount %> name="amount" type="text" class="form-control" placeholder="Amount">
+               <input value="<%= @expense.amount %>" name="amount" type="text" class="form-control" placeholder="Amount">
             </div>
 
           </div>
@@ -35,7 +35,7 @@
           <div class="form-group">
             <label for="textArea" class="col-lg-2 control-label">Comments (Optional)</label>
             <div class="col-lg-10">
-              <textarea value=<%= @expense.comment %> name="comment" class="form-control" rows="3" id="textArea"></textarea>
+              <textarea  name="comment" class="form-control" rows="3" id="textArea"><%= @expense.comment %></textarea>
               <span class="help-block">Optional</span>
             </div>
           </div>
