--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,8 @@
             <% if user.present? %>
               <li><a href="/trips">My Trips</a></li>
               <li><a href="/expenses">Expenses</a></li>
-              <li><a href="/newflightinfo">Enter New Flight Info</a></li>
+              <li><a href="/flights">Flights</a></li>
+              <li><a href="">Hotels</a></li>
             <% end %>
 
             <li><a href="/index">Resources</a></li>
