--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,22 +1,25 @@
-<div class="page-header">
-  <h2>Add New Trip</h2>
-</div>
-<form action="/trips/create">
-<div class="row">
-  <div class="col-lg-6">
-    <div class="well">
-      <form class="form-horizontal">
-        <fieldset>
-          <legend>New item</legend>
+<div class="container">
+
+  <div class="page-header">
+    <h2>My Trips</h2>
+  </div>
+
+  <form action="/trips/create">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="well">
+          <form class="form-horizontal">
+            <fieldset>
+              <legend>Add a New Trip</legend>
+                <div class="form-group">
+                  <div class="col-lg-6">
+                      <label for="inputName" class="col-lg-2 control-label">Trip Name</label>
+                      <input name="trip_name" type="text" class="form-control" placeholder="Trip Name">
+                  </div>
+                </div>
           <div class="form-group">
-            <label for="inputName" class="col-lg-2 control-label">Trip Name</label>
-            <div class="col-lg-10">
-              <input name="trip_name" type="text" class="form-control" placeholder="Trip Name">
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="inputDescription" class="col-lg-2 control-label">Location</label>
-            <div class="col-lg-10">
+            <div class="col-lg-6">
+               <label for="inputDescription" class="col-lg-2 control-label">Location</label>
                <input name="location" type="text" class="form-control" placeholder="Location: City, State">
             </div>
 
@@ -49,6 +52,9 @@
           </div>
 
         </fieldset>
-      </form>
-    </div>
+
+   </form>
+
   </div>
+
+</div>
