--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
   <title>Trave.ly</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +59,7 @@
         </div>
       </div>
     </div>
-
+<!-- remove container here if you want picture to expand -->
   <div class="container">
     <% if notice.present? %>
       <div class="alert alert-dismissable alert-success">
