--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,28 @@
-<div class="page-header">
+
+<style>
+#full-screen {
+display: block;
+z-index: -999;
+min-height: 100%;
+min-width: 1024px;
+width: 100%;
+height: auto;
+position: fixed;
+top: 0;
+left: 0;
+opacity:0.8;
+}
+</style>
+
+<div>
+  <img alt="back image" src="http://1.bp.blogspot.com/-8RqSdeFZHYM/T6PS5unOptI/AAAAAAAAABg/ZnEDaCSFXy8/s1600/iceland.jpg" id="full-screen">
+  <div class="page-header">
     <h2>Welcome to Trave.ly</h2>
   </div>
-
   <div>
-    <a href="/trips/new" class="btn btn-warning pull-left">Create a Trip</a>
+    <h3>Simplify your group travel. </h3>
+    <h3>Plan + travel together.</h3>
+    <a href="/users/new" class="btn btn-warning pull-left">Sign Up Today</a>
   </div>
-
+</div>
 
