Updated Flight Input

--- a/app/views/flights/flights.html.erb
+++ b/app/views/flights/flights.html.erb
@@ -28,7 +28,7 @@
             <% @flight_list.each do |flight| %>
 
               <tr>
-                <td><%= flight.id %></td>
+                <!-- <td><%= flight.id %></td> -->
                 <td><%= flight.trip_name %></td>
                 <td><%= flight.airline %></td>
                 <td><%= flight.flight_number %></td>
